# nautilus-admin

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  INSTALL.md  README.md  install.sh  install_dev.sh  install_system.sh  meson.build
data/: meson.build  nautilus-admin.appdata.xml  nautilus-hide.appdata.xml
extension/: meson.build  nautilus-admin.py  nautilus-hide.py
po/: LINGUAS  POTFILES  da.po  de.po  eo.po  fr.po  nautilus-admin.pot  nb_NO.po  update_potfile.sh
